Fix notice z-index

--- a/style/style.css
+++ b/style/style.css
@@ -265,6 +265,7 @@ blockquote {
     opacity: 0;
     transition: all 1.5s 0.5s;
     transform: translateX(calc(5vw + 50%));
+    z-index: 1000;
 }
 
 #notice:hover {
